<resources>

    <string name="app_name">MemeJ</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="signin_failed">Unable to sign up at the moment. Please try again later</string>
    <string name="login_failed">Unable to sign in at the moment. Please try again later</string>
    <string name="password">Password</string>
    <string name="new_to_memejam">New to MemeJ?</string>
    <string name="signup_instead"> SignUp Instead</string>
    <string name="email">Email</string>
    <string name="lorem_ipsum">the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="getRequestsFailed">Unable to get the requests at the moment. Please try again later</string>
    <string name="unable_meeme_world">Unable to get memes. Please try again later</string>

    <string name="already_have_an_account">Already have an account?</string>

    <!--    Empty errors-->
    <string name="username_empty">Username can not be empty</string>
    <string name="pwd_empty">Password can not be empty</string>
    <string name="name_empty">Name can not be empty</string>
    <string name="email_empty">Email can not be empty</string>

    <!--    Invalid Errors-->
    <string name="email_invalid">Email is invalid</string>
    <string name="username_invalid">Username is invalid</string>
    <string name="name_invalid">Name is invalid</string>
    <string name="pwd_invalid">Password must have at least one lower case, one upper case and a numeric digit</string>

    <!--    Length errors-->
    <string name="name_length">Name should be between 2 to 20 characters</string>
    <string name="pwd_length_min">Password must be at least 6 characters</string>
    <string name="pwd_length_max">Password can not be greater than 20 characters</string>

    <string name="search">Search</string>
    <string name="image_tag">#Image Tag</string>
    <string name="my_memes">My memes</string>
    <string name="my_drafts">My Drafts</string>
    <string name="memeworld">Meme World</string>
    <string name="explore">Explore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_signin_with_google_instead">Continue SignIn with Google Instead</string>
    <string name="search_hint">Search</string>
    <string name="profile">Profile</string>
    <string name="memetag">memeTag</string>
    <string name="add_a_tag">Add a tag</string>
    <string name="add_a_line">Add a line</string>
    <string name="me">Me</string>
    <string name="successLogin">Login Successful</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="choose_your_avatar">Choose your avatar</string>
    <string name="total_memes">Total Memes</string>
    <string name="total_likes">Total Likes</string>
    <string name="sample_timestamp">2020–05–12T21:44:04.883Z</string>
    <string name="_1000">1000</string>
    <string name="_0">0</string>
    <string name="choose_font">Font</string>
    <string name="choose_color">Color</string>
    <string name="time">Time</string>
    <string name="users">users</string>
    <string name="swipe_to_get_next">Swipe to get next</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="suggestion">Suggestion</string>
    <string name="tag">#tag</string>
    <string name="lines">Go back to home</string>
    <string name="swipe_for_more">Swipe for more</string>
    <string name="size">Size</string>
    <string name="type_to_search">Type to search</string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="error_request_timed_out">Request Timeout</string>
    <string name="error_please_check_internet">Please check your internet connection</string>
    <string name="no_internet_str">\" No Internet Connection\"</string>
    <string name="hello">Hello</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mismatch">Passwords do not match</string>
    <string name="under_constuction">Under Construction</string>
    <string name="logout">Logout</string>
    <string name="tag_name">Tag Name</string>
    <string name="tap_to_load_more">Tap to load more</string>
    <string name="liked_memes">Liked Memes</string>
    <string name="intro">Lets get started with MemeJ</string>
    <string name="page1">Add a line to what others write</string>
    <string name="page2">Get a random meme and swipe for more</string>
    <string name="page3">Create and search memes</string>
    <string name="page4">Share and spread the love</string>
    <string name="title1">Home</string>
    <string name="title2">Explore</string>
    <string name="title3">Search and Create</string>
    <string name="title4">Love the MemeWorld</string>
    <string name="intro_prefs">intro_prefs</string>
    <string name="intro_prefs_first_run">intro_prefs_key</string>
    <string name="ka">KA</string>
    <string name="explore_spaces">Explore Spaces</string>
    <string name="invites_and_requests">Invites and Requests</string>
    <string name="my_spaces">My spaces</string>
    <string name="workspaces">Workspaces</string>
    <string name="add_workspace">Add workspace</string>
    <string name="myWspc">My Workspaces</string>
    <string name="global_space">Global Space</string>
    <string name="iit_patna">IIT Patna</string>
    <string name="view_1">View 1</string>
    <string name="view_2">View 2</string>
    <string name="view_3">View 3</string>
    <string name="people">People</string>
    <string name="memes">Memes</string>
    <string name="likes">Likes</string>
    <string name="join">JOIN</string>
    <string name="invite">Invite</string>
    <string name="exit">EXIT</string>
    <string name="name_of_the_workspace">Name of the workspace</string>
    <string name="create_space">Create Space</string>
    <string name="workspace_already_exits">Workspace already exists</string>
    <string name="workspace_empty">Name of the workspace can not be empty</string>
    <string name="confirm_password_not_empty">Confirm password can not be empty</string>
    <string name="successReg">Registration successful</string>
    <string name="get_link">Get link</string>
    <string name="val">Val</string>
    <string name="send_invites">SEND INVITES</string>
    <string name="invites">Invites</string>
    <string name="rejectSuccess">"Request rejected "</string>
    <string name="acceptSuccess">Request accepted</string>
    <string name="switch_to_space_question">Do you want to switch to $s space?</string>
    <string name="NO">NO</string>
    <string name="SWITCH">SWITCH</string>
    <string name="you_are_not_a_part_of_any_of_the_spaces">You are not a part of any of the spaces.</string>
    <string name="unableToLoadMySpaces">Unable to get my spaces. Please try again later</string>
    <string name="spaceSucess">Spaces successfully loaded</string>
    <string name="no_pending_invites_and_request">No pending invites and request.</string>
    <string name="noUsers">No users from the editable</string>
    <string name="failSend">Failed to send the invites</string>
    <string name="emptyListForUsers">Add some users in the list to send invites</string>
    <string name="retry">RETRY</string>
    <string name="fail_explore">Unable to load memes</string>
    <string name="exploreSuccess">Success explore spaces</string>
    <string name="unableToLoad">Unable to load memes. Please try again later</string>


    <array name="themeColors">
        <item>@color/green_500</item>
        <item>@color/blue_500</item>
        <item>@color/red_500</item>
        <item>@color/grey_500</item>
        <item>@color/orange_500</item>
        <item>#D1C4E9</item>
        <item>#FF1744</item>
        <item>#1A237E</item>
        <item>#004D40</item>
        <item>#009688</item>
        <item>#827717</item>
        <item>#827717</item>
        <item>#FFF9C4</item>
        <item>#F57F17</item>
        <item>#000000</item>
        <item>@color/crimson</item>
        <item>@color/useBlue</item>
        <item>#FFFFFF</item>

    </array>


    <string-array name="font_types">
        <item>Arial</item>
        <item>Long Fox</item>
        <item>Bomb</item>
        <item>Robot Reaver</item>
        <item>Fonty</item>
    </string-array>


</resources>
