<?xml version="1.0" encoding="utf-8"?>
<layout>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/pb_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/tilPassword"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/margins"
            android:padding="@dimen/margins">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/margins"
            android:padding="@dimen/margins"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="100dp"
            android:layout_height="@dimen/btn_size"
            android:layout_below="@id/tilPassword"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:elevation="@dimen/margins"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <!--        <com.google.android.gms.common.SignInButton-->
        <!--            android:id="@+id/google_login"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="50dp"-->
        <!--            android:focusable="true"-->
        <!--            android:clickable="true"-->
        <!--            android:layout_below="@id/login_btn"-->
        <!--            android:layout_centerHorizontal="true"-->
        <!--            android:layout_marginTop="12dp" />-->


        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/login_btn"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margins"
                android:text="@string/new_to_memejam" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_signUpInstead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margins"
                android:paddingStart="4dp"
                android:text="@string/signup_instead"
                android:textColor="@color/colorAccent" />


        </LinearLayout>


        <!--                <com.google.android.gms.common.SignInButton-->
        <!--                    android:id="@+id/Gsign_in_button"-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:layout_below="@id/ll1"-->
        <!--                    android:layout_centerInParent="true"-->
        <!--                    android:layout_marginTop="@dimen/margins"-->
        <!--                    android:foregroundGravity="center" />-->

    </RelativeLayout>

</layout>
